<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shot_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="1dp">

    <TextView
        android:id="@+id/dialog_shot_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/dialog_shoot_message_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:id="@+id/dialog_shot_description_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/dialog_shot_description_title"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark" />


    <EditText
        android:id="@+id/dialog_shot_description_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_shot_description_divider"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/dialog_shoot_message_message"
        android:inputType="textMultiLine"
        tools:ignore="LabelFor" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/dialog_shot_description_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/dialog_shot_description_message"
        app:singleSelection="true"
        app:checkedButton="@id/dialog_shot_description_button_save">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_shot_description_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_shoot_message_positive"
            style="@style/SaveShotDialogButtonStylePositive"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_shot_description_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_shoot_message_negative"
            style="@style/SaveShotDialogButtonStyleNegative"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>
</RelativeLayout>