<resources>
    <string name="app_name">Flight Archery Tracker</string>

    <string name="fragment_title_1">Training</string>
    <string name="fragment_title_2">Records</string>

    <string name="button_start_training">Start Training</string>
    <string name="button_save_shoot">Save Shot</string>
    <string name="button_stop_current_training">Stop Training</string>
    <string name="button_toolbar_arrow_back">Toolbar Arrow back</string>

    <string name="dialog_shoot_message_title">Save Shot\s Information</string>
    <string name="dialog_shoot_message_message">Add shot information</string>
    <string name="dialog_shoot_message_positive">Save Shot</string>
    <string name="dialog_shoot_message_negative">Cancel</string>

    <string name="item_training_date">Date</string>
    <string name="item_training_title">Training Session</string>
    <string name="item_training_id">1</string>
    <string name="item_training_see_map_shots">See all shots for training</string>
    <string name="item_training_see_shots">See my shots</string>
    <string name="item_training_delete">Delete Training</string>

    <string name="shots_list_title">Your shots for this training</string>
    <string name="shots_list_toast">Here are all shots for this training</string>
    <string name="shots_list_empty_view_text">There are no shots for this training!</string>

    <string name="item_shot_title">Shot #</string>
    <string name="item_shot_id">1</string>
    <string name="item_shot_distance_title">Distance:</string>
    <string name="item_shot_distance">100</string>
    <string name="item_shot_meters">meters</string>
    <string name="item_shot_description">Here some comments</string>

    <string name="alert_dialog_delete_title">Delete Training</string>
    <string name="alert_dialog_delete_message">Are you sure?</string>
    <string name="alert_dialog_delete_positive">Yes</string>
    <string name="alert_dialog_delete_negative">No</string>

    <string name="alert_dialog_delete_all_title">Delete All Trainings</string>
    <string name="alert_dialog_delete_all_message">Are you sure?</string>
    <string name="alert_dialog_delete_all_positive">Yes</string>
    <string name="alert_dialog_delete_all_negative">No</string>

    <string name="alert_dialog_stop_training_title">Stop this Training</string>
    <string name="alert_dialog_stop_training_message">Are you sure?</string>
    <string name="alert_dialog_stop_training_positive">Yes</string>
    <string name="alert_dialog_stop_training_negative">No</string>

    <string name="alert_dialog_no_gps_message_part">This application requires GPS to work properly, do you want to enable it?</string>
    <string name="alert_dialog_no_gps_positive">Yes</string>

    <string name="toast_before_delete_all">Please, make sure that you stop your current training</string>
    <string name="toast_no_google_play_service">Please activate Google Play Service</string>
    <string name="toast_deny_request_permission">Permission denied by User</string>
    <string name="toast_start_training">Your training is started</string>
    <string name="toast_save_shot">Your shot is saved</string>
    <string name="toast_stop_training">Your current training is stopped</string>
    <string name="toast_before_change_language">Before changing a language, please make sure that you stop current training</string>
    <string name="toast_language_selected">Language already selected</string>
    <string name="toast_feedback_no_email">There is no email program associated to perform this action</string>
    <string name="toast_feedback_no_telegram">There is no Telegram installed</string>

    <string name="marker_start_title">Start</string>
    <string name="marker_shot_part1">Shot # </string>
    <string name="marker_shot_part_2">, distance </string>

    <string name="item_shot_map_distance">Distance:</string>
    <string name="item_shot_map_dist">45</string>
    <string name="item_shot_map_meters">m</string>

    <string name="menu_main_select_language">Select Language</string>
    <string name="menu_main_language_english">English</string>
    <string name="menu_main_language_russian">Russian</string>
    <string name="menu_main_feedback">Feedback</string>
    <string name="menu_main_feedback_email">Email</string>
    <string name="menu_main_feedback_telegram">Telegram</string>
    <string name="menu_main_support">Support Developer</string>
    <string name="menu_main_delete_all">Delete All Trainings</string>

    <string name="alert_dialog_feedback_title">Thank you for using this App</string>
    <string name="alert_dialog_feedback_message_1">If you find any bugs or you have any questions, offers, or remarks, please feel free to send an Email or write directly in Telegram.</string>
    <string name="alert_dialog_feedback_message_2">Also if you want this App on your language you can help with translation.</string>
    <string name="alert_dialog_feedback_button_dismiss">Dismiss</string>
    <string name="alert_dialog_feedback_button_telegram">Telegram</string>
    <string name="alert_dialog_feedback_button_email">Email</string>

    <string name="feedback_email">flightarcheryfeedback@gmail.com</string>

    <string name="feedback_chooser_message">Select an Email Client: </string>

    <string name="alert_dialog_support_dev_title">Thank you for using this App</string>
    <string name="alert_dialog_support_dev_message">This App is free of charge. If you like it, you always can support a developer via PayPal.</string>
    <string name="alert_dialog_support_dev_positive">PayPal</string>
    <string name="alert_dialog_support_dev_negative">Dismiss</string>


</resources>
