<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/select_language"
        android:orderInCategory="1"
        android:title="@string/menu_main_select_language"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/language_english"
                android:title="@string/menu_main_language_english" />
            <item
                android:id="@+id/language_russian"
                android:title="@string/menu_main_language_russian" />
        </menu>
    </item>

    <item
        android:id="@+id/feedback"
        android:orderInCategory="3"
        android:title="@string/menu_main_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all"
        android:orderInCategory="2"
        android:title="@string/menu_main_delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/support_developer"
        android:orderInCategory="4"
        android:title="@string/menu_main_support"
        app:showAsAction="never" />
</menu>